--- a/partials/form.html
+++ b/partials/form.html
@@ -47,8 +47,8 @@
   </button>
 </form>
 <!-- SHOW DATA FROM INPUTS AS THEY ARE BEING TYPED -->
-<pre>
+<!-- <pre>
     {{ PostformData }}
-</pre>
+</pre> -->
 
 </div>
