--- a/partials/home.html
+++ b/partials/home.html
@@ -1,7 +1,21 @@
-<div class="container">
+<div class="container col-sm-6">
+  <h3>
+    <i class="fa fa-car" aria-hidden="true"></i>
+    LET US SAVE YOU TIME AND MONEY BY HELPING YOU FIND YOUR NEXT VEHICLE!
+  </h3>
+  <hr>
   <p>
-    At A&amp;T Auto Sales, we stock inventory based on our customer's direct
-    requests and opinions. If there is a vehicle you're interested in at a particular
-    price point, let us know and we'll go out and get it for you.
+    At A&amp;T Auto Sales, we go to great lengths helping our customers
+    find the specific vehicle that they want in a price range that they
+    can afford.
+  </p>
+  <p>
+    Don't waste time searching for your next vehicle. Instead,
+    let us go out and get it for you!
+  </p>
+  <p>
+    We stock our inventory according to our customers' needs. This means that you
+    can call us to let us know what you're looking for, or you can use our Car-Finder,
+    and we promise that we will save you time and money by finding the vehicle you're searching for.
   </p>
 </div>
