--- a/css/footer.css
+++ b/css/footer.css
@@ -1,19 +1,19 @@
 /* Sticky footer styles
 -------------------------------------------------- */
-/*html {
+html {
   position: relative;
   min-height: 100%;
-}*/
+}
 /* Margin bottom by footer height */
-/*body {
-  margin-bottom: 80px;
+body {
+  margin-bottom: 140px;
 }
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 80px;
-}*/
+  height: 140px;
+}
 
 /*@media screen and (max-width: 499px) {
   footer p {
@@ -47,7 +47,11 @@
   padding-bottom: 30px;
 }
 
-i {
+#bottomFooter a {
+  font-size: 12px;
+}
+
+#topFooter i {
   padding: 15px;
   color: white;
 }
