--- a/css/logo.css
+++ b/css/logo.css
@@ -2,3 +2,12 @@
   display:block;
   margin:auto;
 }
+
+h1,h2,h3,h4,h5,h6,p,a {
+  font-family: 'Poiret One', cursive;
+  font-weight: bold;
+}
+
+form {
+  margin-bottom: 15px;
+}
