--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,3 +1,45 @@
 <!-- TODO: make a contact page that does something different than normally -->
 
-<p>contact stuff goes here</p>
+<div class="container col-sm-6">
+    <div class="row">
+        <div class="col-lg-12">
+            <h2>
+              <i class="fa fa-car" aria-hidden="true"></i> A&amp;T Auto Sales
+            </h2>
+            <hr>
+
+            <p><i class="fa fa-location-arrow" aria-hidden="true"></i>
+              P.O. Box 6105 - 667 Fairbanks Street -
+              Watertown, NY 13601
+            </p>
+            <p><span class="glyphicon glyphicon-envelope"></span>
+              sales@atautony.com
+            </p>
+            <p><span class="glyphicon glyphicon-earphone"></span></i>
+              315-783-3105
+            </p>
+            <p><span class="glyphicon glyphicon-earphone"></span>
+              315-408-1424
+            </p>
+
+            <!-- <p><strong><a href="#"><span></span></a></strong></p> -->
+            <h2><i class="fa fa-support"></i> We Take Requests</h2>
+            <hr>
+            <p>
+              At A&amp;T Auto Sales, we go to great lengths helping our customers
+              find the specific vehicle that they want in a price range that they
+              can afford. Don't waste time searching for your next vehicle. Instead,
+              let us go out and get it for you!
+            </p>
+            <p><strong>
+              <a href="#"><span></span></a></strong></p>
+            <!-- <h2><i class="fa fa-code"></i> Hire Us!</h2>
+            <p>Do you want a custom Bootstrap theme? Do you like one of our templates, but want some additional
+               features added? If so, you can hire the Start Bootstrap team to get your custom project done! We build
+               HTML/CSS Bootstrap themes on a per project basis. We can work from design concepts, examples of
+               other designs you like, or from PSD's! If you're interested in our custom design services,
+               <a href="#">click here for more information</a>, or email us at:</p>
+            <p><strong><a href="#"><span></span></a></strong></p> -->
+        </div>
+    </div>
+</div>
